# App-Delivery

Delivery-App/: .env.example  .gitignore  body.json  cookies.txt  docker-compose.yml  dump_project.bat  project_dump.txt  pyproject.toml
Delivery-App/application/: __init__.py
Delivery-App/application/contracts/: __init__.py  package_dto.py  pagination.py
Delivery-App/application/use_cases/: __init__.py  get_package_details.py  get_package_types.py  get_packages.py  register_package.py
Delivery-App/bootstrap/: __init__.py  asgi.py  main.py
Delivery-App/core/: __init__.py  config.py  exceptions.py
Delivery-App/docker/: app.Dockerfile
Delivery-App/domain/: __init__.py
Delivery-App/domain/entities/: __init__.py  package.py  package_type.py
Delivery-App/domain/ports/: __init__.py  currency_rates_provider.py  package_repository.py  package_type_repository.py  session_repository.py
Delivery-App/domain/services/: __init__.py  delivery_pricing.py
Delivery-App/domain/value_objects/: __init__.py  currency.py  identifiers.py
Delivery-App/infrastructure/: __init__.py
Delivery-App/infrastructure/database/: __init__.py  init_db.py
Delivery-App/infrastructure/logging/: __init__.py  config.py
Delivery-App/infrastructure/redis/: client.py
Delivery-App/infrastructure/security/: redis_session_repository.py
Delivery-App/infrastructure/sqlalchemy/: __init__.py  database.py  models.py  package_repository.py  package_type_repository.py
Delivery-App/infrastructure/tasks/: __init__.py  celery_app.py  currency_tasks.py  delivery_tasks.py
Delivery-App/migrations/: alembic.ini
Delivery-App/migrations/alembic/: env.py
Delivery-App/presentation/: __init__.py  fastapi.py
Delivery-App/presentation/dependencies/: __init__.py  container.py  di_deps.py  session_deps.py
Delivery-App/presentation/middleware/: __init__.py  error_middleware.py  logging_middleware.py
Delivery-App/presentation/routers/: __init__.py  delivery.py  health.py  package_types.py  (+1 more)
Delivery-App/tests/: test_delivery_pricing.py
(+7 files in other folders)
